[gd_scene load_steps=6 format=3 uid="uid://cupq5fkss800q"]

[ext_resource type="Texture2D" uid="uid://kt17qx3lclba" path="res://assets/sprites/towers/gemas_RGB.png" id="1_3ru58"]
[ext_resource type="Script" uid="uid://c372xl48dnak7" path="res://ui/towers_menu/tower_count/tower_count.gd" id="1_sxpkl"]
[ext_resource type="LabelSettings" uid="uid://bqa8xh2lpphdf" path="res://ui/label_settings/label_settings_24.tres" id="2_sxpkl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ru58"]
bg_color = Color(0.09239871, 0.09746272, 0.09756362, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_j0jdr"]
atlas = ExtResource("1_3ru58")
region = Rect2(24, 24, 50, 53)

[node name="TowerCount" type="Control"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 3
anchor_right = 0.068
anchor_bottom = 0.052
offset_left = 14.0
offset_top = 12.0
offset_right = 13.439987
offset_bottom = 11.84
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxpkl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 140.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ru58")

[node name="RedCount" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 117.0
offset_bottom = 58.0
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="RedCount"]
layout_mode = 2
texture = SubResource("AtlasTexture_j0jdr")

[node name="Value" type="HBoxContainer" parent="RedCount"]
layout_mode = 2

[node name="CurrentLabel" type="Label" parent="RedCount/Value"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_sxpkl")

[node name="Slash" type="Label" parent="RedCount/Value"]
layout_mode = 2
text = "/"
label_settings = ExtResource("2_sxpkl")

[node name="MaxLabel" type="Label" parent="RedCount/Value"]
layout_mode = 2
text = "2"
label_settings = ExtResource("2_sxpkl")
